# latent-reasoning

./: .gitignore  audio_flamingo_next.py  audio_flamingo_runtime.py  capture_mmar_attention.py  compare_af_next_hf.py  compare_qwen3_hf.py  download_results.py  evaluation.py  evaluation_rubrics.py  evaluator.py  latent_cot.py  main.py  mmar_common.py  modal_cache.py  pyproject.toml  qwen3.py  run_aha_bench.py  run_audio_flamingo3_aha.py  run_audio_flamingo3_mcr.py  run_audio_flamingo3_mmar.py  run_audio_flamingo_next_mmar.py  run_compare_af_next_hf.py  seed_volume.py  test_af_next_hf_outputs.py  test_random.py  utils.py  view_mmar_results.py
.agents/skills/modal/: SKILL.md
.agents/skills/modal/references/api/: modal.App.md  modal.Client.md  modal.CloudBucketMount.md  modal.Cls.md  modal.Cron.md  modal.Dict.md  modal.Environment.md  modal.Error.md  modal.FilePatternMatcher.md  modal.Function.md  modal.FunctionCall.md  modal.Image.md  modal.NetworkFileSystem.md  modal.Period.md  modal.Probe.md  modal.Proxy.md  modal.Queue.md  modal.Retries.md  modal.Sandbox.md  modal.SandboxSnapshot.md  modal.Secret.md  modal.Server.md  modal.Tunnel.md  modal.Volume.md  modal.Workspace.md  modal.asgi_app.md  modal.batched.md  modal.billing.md  modal.call_graph.md  modal.concurrent.md  modal.config.md  modal.container_process.md  modal.current_function_call_id.md  modal.current_input_id.md  modal.enable_output.md  modal.enter.md  modal.exception.md  modal.exit.md  modal.fastapi_endpoint.md  modal.file_io.md  (+8 more)
.agents/skills/modal/references/examples/: agent.md  algolia_indexer.md  chai1.md  (+60 more)
(+84 files in other folders)
